--- a/ErsatzTV/appsettings.json
+++ b/ErsatzTV/appsettings.json
@@ -6,7 +6,8 @@
         "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information",
         "Microsoft": "Warning",
         "System.Net.Http.HttpClient": "Warning",
-        "MudBlazor": "Information"
+        "MudBlazor": "Information",
+        "ErsatzTV.Core.Scheduling": "Debug"
       }
     },
     "Enrich": [
